# autotools-learn

./: .gitignore  README.md
helloworld/: Makefile.am  configure.ac
